--- a/index.html
+++ b/index.html
@@ -85,23 +85,23 @@
             </div>
             <div class="wedding-announcement">
                 <div class="couple-name-merried-text">
-                    <h2 class="wow slideInUp" data-wow-duration="1s">Suntina &amp; Famico</h2>
+                    <h2 class="wow slideInUp" data-wow-duration="1s">Michal &amp; Gabriela</h2>
                     <div class="married-text wow fadeIn" data-wow-delay="1s">
                         <h4 class="">
-                        <span class=" wow fadeInUp" data-wow-delay="1.05s">W</span>
-                        <span class=" wow fadeInUp" data-wow-delay="1.10s">e</span>
-                        <span class=" wow fadeInUp" data-wow-delay="1.15s">'</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.05s">B</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.10s">i</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.15s">e</span>
                         <span class=" wow fadeInUp" data-wow-delay="1.20s">r</span>
-                        <span class=" wow fadeInUp" data-wow-delay="1.25s">e</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.25s">z</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.30s">e</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.35s">m</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.40s">y</span>
                         <span>&nbsp;</span>
-                        <span class=" wow fadeInUp" data-wow-delay="1.30s">g</span>
-                        <span class=" wow fadeInUp" data-wow-delay="1.35s">e</span>
-                        <span class=" wow fadeInUp" data-wow-delay="1.40s">t</span>
-                        <span class=" wow fadeInUp" data-wow-delay="1.45s">t</span>
-                        <span class=" wow fadeInUp" data-wow-delay="1.50s">i</span>
-                        <span class=" wow fadeInUp" data-wow-delay="1.55s">n</span>
-                        <span class=" wow fadeInUp" data-wow-delay="1.60s">g</span>
-                        <span>&nbsp;</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.45s">S</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.50s">l</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.55s">u</span>
+                        <span class=" wow fadeInUp" data-wow-delay="1.60s">b</span>
+                   <!--     <span>&nbsp;</span>
                         <span class=" wow fadeInUp" data-wow-delay="1.65s">m</span>
                         <span class=" wow fadeInUp" data-wow-delay="1.70s">a</span>
                         <span class=" wow fadeInUp" data-wow-delay="1.75s">r</span>
@@ -109,15 +109,15 @@
                         <span class=" wow fadeInUp" data-wow-delay="1.85s">i</span>
                         <span class=" wow fadeInUp" data-wow-delay="1.90s">e</span>
                         <span class=" wow fadeInUp" data-wow-delay="1.95s">d</span>
-
+-->
                         </h4>
                     </div>
                     <!-- <i class="fa fa-heart"></i> -->
                 </div>
 
                 <div class="save-the-date">
-                    <h4>Save the date</h4>
-                    <span class="date">25 DEC 2017</span>
+                    <h4>Zapamietajcie date</h4>
+                    <span class="date">13 Lipca 2019</span>
                 </div>
             </div>
         </section>
@@ -224,12 +224,27 @@
             <div class="container">
                 <div class="row">
                     <div class="col col-md-4">
-                        <h2><span>We are waiting for.....</span> The adventure</h2>
+                        <h2><span>Do slubu zostalo niewiele czasu</span> a dokladnie</h2>
                     </div>
                     <div class="col col-md-7 col-md-offset-1">
                         <div class="count-down-clock">
-                            <div id="clock">
-
+                           <div id="clock">
+                               <!-- <div class="box">
+                                    <div>00</div>
+                                    <span>Dni</span>
+                                </div>
+                                <div class="box">
+                                    <div>00</div>
+                                    <span>Godzin</span>
+                                </div>
+                                <div class="box">
+                                    <div>00</div>
+                                    <span>Minut</span>
+                                </div>
+                                <div class="box">
+                                    <div>00</div>
+                                    <span>Sekund</span>
+                                </div>-->
                             </div>
                         </div>
                     </div>
