--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
         <!-- start footer -->
         <footer class="site-footer">
             <div class="back-to-top">
-                <a href="#" class="back-to-top-btn"><span> <img src="images/upload.png" alt class="img img-responsive"></span></a>
+                <a href="#" class="back-to-top-btn"><span> <i class="fi flaticon-cupid"></i></span></a>
             </div>
             <div class="container">
                 <div class="row">
