--- a/index.html
+++ b/index.html
@@ -267,15 +267,15 @@
                                 </div>
                                 <div class="col col-md-6">
                                     <div class="img-holder">
-                                        <img src="images/story/img-1.jpg" alt class="img img-responsive">
+                                        <img src="images/story/img-11.jpg" alt class="img img-responsive">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col col-md-6">
                                     <div class="img-holder right-align-text story-slider">
-                                        <img src="images/story/img-2.jpg" alt class="img img-responsive">
-                                        <img src="images/story/img-3.jpg" alt class="img img-responsive">
+                                        <img src="images/story/img-22.jpg" alt class="img img-responsive">
+                                        <img src="images/story/img-33.jpg" alt class="img img-responsive">
                                     </div>
                                 </div>
                                 <div class="col col-md-6 text-holder">
@@ -302,15 +302,15 @@
                                 </div>
                                 <div class="col col-md-6">
                                     <div class="img-holder right-align-text story-slider">
-                                        <img src="images/story/img-7.jpg" alt class="img img-responsive">
-                                        <img src="images/story/img-5.jpg" alt class="img img-responsive">
+                                        <img src="images/story/img-55.jpg" alt class="img img-responsive">
+                                        <img src="images/story/img-44.jpg" alt class="img img-responsive">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col col-md-6">
                                     <div class="img-holder">
-                                        <img src="images/story/img-1.jpg" alt class="img img-responsive">
+                                        <img src="images/story/img-8.jpg" alt class="img img-responsive">
                                     </div>
                                 </div>
                                 <div class="col col-md-6 text-holder">
@@ -660,10 +660,10 @@
                     <div class="col col-xs-12 sortable-gallery">
                         <div class="gallery-filters">
                             <ul>
-                                <li><a data-filter="*" href="#" class="current">All</a></li>
-                                <li><a data-filter=".wedding" href="#">Wedding</a></li>
-                                <li><a data-filter=".ceremony" href="#">Ceremony</a></li>
-                                <li><a data-filter=".party" href="#">Party</a></li>
+                                <li><a data-filter="*" href="#" class="current">Wszystko</a></li>
+                                <li><a data-filter=".wedding" href="#">Przygotowanie</a></li>
+                                <li><a data-filter=".ceremony" href="#">Slub</a></li>
+                                <li><a data-filter=".party" href="#">Wesele</a></li>
                             </ul>
                         </div>
 
@@ -707,9 +707,9 @@
                                <!--  <a href="images/gallery/img-8.jpg" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="images/gallery/img-8.jpg" alt class="img img-responsive">
                                 </a> -->
-                                <a href="https://www.youtube.com/embed/XSGBVzeBUbk?autoplay=1" data-type="iframe" class="video-play-btn">
+                                <a href="images/gallery/img-8.jpg" class="fancybox" data-fancybox-group="gall-1">
                                     <img src="images/gallery/img-8.jpg" alt class="img img-responsive">
-                                    <i class="fa fa-play"></i>
+                                   <!-- <i class="fa fa-play"></i>-->
                                 </a>
 
                             </div>
