--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Page Title -->
-    <title> Lovly Wedding - Responsive Wedding Template </title>
+    <title> Slub Gabrieli i Michala </title>
 
     <!-- Favicon and Touch Icons -->
     <link href="images/favicon/favicon.png" rel="shortcut icon" type="image/png">
@@ -88,7 +88,7 @@
             </div>
             <div class="wedding-announcement">
                 <div class="couple-name-merried-text">
-                    <h2 class="wow slideInUp" data-wow-duration="1s">Michal &amp; Gabriela</h2>
+                    <h2 class="wow slideInUp" data-wow-duration="1s">Gabriela &amp; Michal</h2>
                     <div class="married-text wow fadeIn" data-wow-delay="1s">
                         <h4 class="">
                         <span class=" wow fadeInUp" data-wow-delay="1.05s">B</span>
@@ -167,12 +167,12 @@
                     <div class="col col-xs-12">
                         <div class="gb groom">
                             <div class="img-holder wow fadeInLeftSlow">
-                                <img src="images/couple/rsz_img-1.png" alt>
+                                <img src="images/couple/rsz_img-2.jpg" alt>
                             </div>
                             <div class="details">
                                 <div class="details-inner">
-                                    <h3>Pan Mlody</h3>
-                                    <p>80 kg czystego czarnego humoru. Górnik, którego ulubiony kolor to miedziany. </p>
+                                    <h3>Pani Mloda</h3>
+                                    <p>Fanka wiedzmina i kraftowych browarkow. Mysle ze ta sekcje napisze duzo lepiej sama ;) </p>
                                     <span class="signature">Michal</span>
                                     <ul class="social-links">
                                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -185,8 +185,8 @@
                         <div class="gb bride">
                             <div class="details">
                                 <div class="details-inner">
-                                    <h3>Pani Mloda</h3>
-                                    <p>Fanka wiedzmina i kraftowych browarkow. Mysle ze ta sekcje napisze duzo lepiej sama ;)</p>
+                                    <h3>Pan Mlody</h3>
+                                    <p>80 kg czystego czarnego humoru. Górnik, którego ulubiony kolor to miedziany. </p>
                                     <span class="signature">Gabriela</span>
                                     <ul class="social-links">
                                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -197,7 +197,7 @@
                                 </div>
                             </div>
                             <div class="img-holder wow fadeInRightSlow">
-                                <img src="images/couple/rsz_img-2.jpg" alt>
+                                <img src="images/couple/rsz_img-1.png" alt>
                             </div>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
                                 </div>
                                 <div class="col col-md-6">
                                     <div class="img-holder">
-                                        <img src="images/story/img-33.jpg" alt class="img img-responsive">
+                                        <img src="images/story/img-11.JPG" alt class="img img-responsive">
                                     </div>
                                 </div>
                             </div>
