--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                 </div>
                                 <div class="col col-md-6">
                                     <div class="img-holder right-align-text story-slider">
-                                        <img src="images/story/img-33.jpg" alt class="img img-responsive">
+                                        <img src="images/story/img-55.JPG" alt class="img img-responsive">
                                         <img src="images/story/img-44.jpg" alt class="img img-responsive">
                                     </div>
                                 </div>
