--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             </div>
                             <div class="details">
                                 <div class="details-inner">
-                                    <h3>Pani Mloda</h3>
+                                    <h3>Panna Mloda</h3>
                                     <p>Fanka wiedzmina i kraftowych browarkow. Mysle ze ta sekcje napisze duzo lepiej sama ;) </p>
                                     <span class="signature">Gabriela</span>
                                     <ul class="social-links">
